Fix modal bottom text color in dark mode

--- a/freesound/static/bw-frontend/styles/molecules/modal.scss
+++ b/freesound/static/bw-frontend/styles/molecules/modal.scss
@@ -102,7 +102,7 @@
 
     a {
       cursor: pointer;
-      color: $white;
+      color: $primary-button-font-color;
     }
   }
 }
